--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AmharicOCR</string>
+    <string name="home">Home</string>
+    <string name="activity">Activity</string>
+    <string name="setting">Setting</string>
+    <string name="profile">Profile</string>
 </resources>
