--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="activity">Activity</string>
     <string name="setting">Setting</string>
     <string name="profile">Profile</string>
+    <string name="analysis">Analysis</string>
 </resources>
