fix & feat: fixed major performance issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="setting">Setting</string>
     <string name="profile">Profile</string>
     <string name="analysis">Analysis</string>
+    <string name="title_edior">Edit</string>
 </resources>
