feat: documents fragment added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="profile">Profile</string>
     <string name="analysis">Analysis</string>
     <string name="title_edior">Edit</string>
+    <string name="title_documents">Documents</string>
+    <string name="vertical_ellipsis">&#8942;</string>
 </resources>
