--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,19 +24,28 @@
     <string name="skip">SKIP</string>
     <string name="start">GOT IT</string>
 
-    <string name="slide_1_title">Hello Food!</string>
-    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
+<!--    <string name="slide_1_title">Hello Food!</string>-->
+<!--    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>-->
 
-    <string name="slide_2_title">Movie Tickets</string>
-    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
+<!--    <string name="slide_2_title">Movie Tickets</string>-->
+<!--    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>-->
 
-    <string name="slide_3_title">Great Discounts</string>
-    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
+<!--    <string name="slide_3_title">Great Discounts</string>-->
+<!--    <string name="slide_3_desc">Best discounts on every single service we offer!</string>-->
 
-    <string name="slide_4_title">World Travel</string>
-    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+<!--    <string name="slide_4_title">World Travel</string>-->
+<!--    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>-->
 
 
+    <string name="intro_1_title">Better Performance</string>
+    <string name="intro_2_title">Inputs</string>
+    <string name="intro_3_title">Supports</string>
+    <string name="intro_4_title">What it is made for</string>
+
+    <string name="intro_1">Capture your images in focused and in a bright area</string>
+    <string name="intro_2">JPG PNG PDF are files supported as an input</string>
+    <string name="intro_3">This application only recognizes Amharic Texts</string>
+    <string name="intro_4">Do not include Diagrams in your input pictures or pdf</string>
     <string name="share_subject">Amharic OCR</string>
     <string name="share_using">Everything</string>
     <string-array name="pref_languages">
@@ -44,8 +53,8 @@
         <item>english</item>
     </string-array>
     <string-array name="pref_languages_value">
-        <item>amh</item>
-        <item>eng</item>
+        <item>am</item>
+        <item>en</item>
     </string-array>
 
     <string-array name="pref_font_size">
